--- a/API/.htaccess
+++ b/API/.htaccess
@@ -7,6 +7,9 @@ RewriteBase /revista_cientifica/API/
 RewriteCond %{SCRIPT_FILENAME} !-d
 RewriteCond %{SCRIPT_FILENAME} !-f
 
-RewriteRule ^create/usuario/([A-z0-9]+)/([\s\S]+)/([\s\S]+)/([\s\S]+)/([\s\S]+)/([0-9]+)/([0-9]+)$ connections.php?action=create&type=usuario&al=$1&email=$2&pass=$3&nom=$4&ap=$5&gen=$6&tipo=$7 [L]
+RewriteRule ^create/usuario/$ connections.php?action=create&type=usuario [L]
+RewriteRule ^create/usuario$ connections.php?action=create&type=usuario [L]
 
-RewriteRule ^get/usuario/([A-z0-9]+)$ connections.php?action=get&type=usuario&req=$1 [L]
+RewriteRule ^get/usuario/([0-9al,]+)(/([0-9,]+))?(/([0-9]+)/([0-9]+))?(/([\s\S]+))?$ connections.php?action=get&type=usuario&req=$1&usert=$3&c=$5&p=$6&fields=$8 [L]
+
+RewriteRule ^search/usuario/([0-9,]+)(/([0-9]+)/([0-9]+))?(/([A-z_,]+))?/([A-z_,]+)/([\s\S]+)$ connections.php?action=search&type=usuario&usert=$1&c=$3&p=$4&fields=$6&sfields=$7&vfields=$8 [L]
