--- a/API/.htaccess
+++ b/API/.htaccess
@@ -19,3 +19,9 @@ RewriteRule ^search/usuario/([0-9,]+)(/([0-9]+)/([0-9]+))?(/([A-z_,]+))?/([A-z_,
 
 RewriteRule ^update/usuario/$ connections.php?action=update&type=usuario [L]
 RewriteRule ^update/usuario$ connections.php?action=update&type=usuario [L]
+
+RewriteRule ^associate/articulo$ connections.php?action=associate&type=articulo [L]
+RewriteRule ^associate/articulo/$ connections.php?action=associate&type=articulo [L]
+
+RewriteRule ^assign/articulo$ connections.php?action=assign&type=articulo [L]
+RewriteRule ^assign/articulo/$ connections.php?action=assign&type=articulo [L]
